src/test/deca/syntax/invalid/invalid-float4.deca
{
    float x = 0x1.8p; // Exponent manquant
}